Added delete and enter button

--- a/Wordle Game/index.html
+++ b/Wordle Game/index.html
@@ -39,6 +39,7 @@
                 <button onclick="handleButtonClick('L')">L</button>
             </div>
             <div class="row">
+                <button onclick="handleButtonClick()">Enter</button>
                 <button onclick="handleButtonClick('Z')">Z</button>
                 <button onclick="handleButtonClick('X')">X</button>
                 <button onclick="handleButtonClick('C')">C</button>
@@ -46,8 +47,6 @@
                 <button onclick="handleButtonClick('B')">B</button>
                 <button onclick="handleButtonClick('N')">N</button>
                 <button onclick="handleButtonClick('M')">M</button>
-            </div>
-            <div class="row">
                 <button onclick="handleButtonClick()">Backspace</button>
             </div>
         </div>
